--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/glfw"]
 	path = deps/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "deps/soil"]
+	path = deps/soil
+	url = https://github.com/kbranigan/Simple-OpenGL-Image-Library.git
